--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -72,6 +72,9 @@ jobs:
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Static HTML export with Nuxt
         run: ${{ steps.detect-package-manager.outputs.manager }} run generate
+      - name: Create _headers file for GitHub Pages
+        run: |
+          echo "Content-Security-Policy: frame-src https://challenges.cloudflare.com; script-src https://challenges.cloudflare.com" >> dist/_headers
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
