--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@botpoison/browser": "^0.1.30",
     "@nuxt/eslint": "^1.7.1",
     "@nuxt/icon": "^1.15.0",
-    "@nuxtjs/turnstile": "^1.0.0",
     "eslint": "^9.32.0",
     "nuxt": "^4.0.1",
     "vue": "^3.5.18",
